--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -306,10 +306,10 @@ jobs:
           ) &&
           echo "AWS_CFN_PARAMS=--parameter-overrides ${AWS_CFN_PARAMS}" >> $GITHUB_ENV
 
-      #- name: Sync product templates to S3
-      #  id: sync-templates
-      #  shell: bash
-      #  run: aws s3 sync products/ s3://aws-service-catalog-templates-774305573766-us-east-1/${{ env.GITHUB_SHA }}/
+      - name: Sync product templates to S3
+        id: sync-templates
+        shell: bash
+        run: aws s3 sync products/ s3://aws-service-catalog-templates-774305573766-us-east-1/${{ env.GITHUB_SHA }}/
 
       - name: Deploy via SAM
         id: deploy-sam
