--- a/template.yaml
+++ b/template.yaml
@@ -45,10 +45,29 @@ Resources:
                 "aws:PrincipalOrgID":
                   - !Ref AwsOrganizationId
 
-  OrgProductsManagementStack:
-    Type: AWS::Serverless::Application
+  OrgProductsStackSet:
+    Type: AWS::CloudFormation::StackSet
     Properties:
-      Location: "./products/products.yaml"
+      StackSetName: OrgProducts
+      Description: Organization products
+      CallAs: DELEGATED_ADMIN
       Parameters:
-        CfnTemplateBucket: !Ref CfnTemplateBucket
-        GitHubSha: !Ref GitHubSha
+        - ParameterKey: CfnTemplateBucket
+          ParameterValue: !Ref CfnTemplateBucket
+        - ParameterKey: GitHubSha
+          ParameterValue: !Ref GitHubSha
+      StackInstancesGroup:
+        - DeploymentTargets:
+            OrganizationalUnitIds: !Ref TargetOuIds
+          Regions: !Ref TargetRegions
+      AutoDeployment:
+        Enabled: true
+        RetainStacksOnAccountRemoval: false
+      ManagedExecution:
+        Active: true
+      OperationPreferences:
+        RegionConcurrencyType: PARALLEL
+        FailureToleranceCount: 1
+        MaxConcurrentCount: 5
+      PermissionModel: SERVICE_MANAGED
+      TemplateBody: *template_body
