Update cfn_capabilities in samconfig.toml and main.yaml with CAPABILITY_AUTO_EXPAND
Adding this back for future products that may need the Serverless, or other, CFN transform. Just heads off a future failure.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -87,6 +87,8 @@ jobs:
         uses: ServerlessOpsIO/gha-deploy-aws-sam@v1
         with:
           aws_account_id: ${{ secrets.AWS_STACKSETS_ACCOUNT_ID }}
-          cfn_capabilities: CAPABILITY_NAMED_IAM
+          # NOTE: We have CAPABILITY_AUTO_EXPAND because of any future products that require
+          # the Serverless transform or any other CFN transform.
+          cfn_capabilities: CAPABILITY_NAMED_IAM CAPABILITY_AUTO_EXPAND
           env_json: ${{ toJson(env) }}
           secrets_json: ${{ toJson(secrets) }}
