Add an IAM role Launch Constraint
Want to use this in the SNS topic policy

--- a/products/products.yaml
+++ b/products/products.yaml
@@ -71,3 +71,27 @@ Resources:
     Properties:
       PortfolioId: !Ref NetworkingPortfolio
       ProductId: !Ref DnsProduct
+
+  DnsLaunchConstraint:
+    Type: AWS::ServiceCatalog::LaunchRoleConstraint
+    Properties:
+      Description: "DNS zone launch constraint"
+      PortfolioId: !Ref NetworkingPortfolio
+      ProductId: !Ref DnsProduct
+      RoleArn: !GetAtt ServiceCatalogCfnExecIamRole.Arn
+
+  ServiceCatalogCfnExecIamRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: "ServiceCatalogCfnExecIamRole"
+      Description: "Service Catalog CFN execution role"
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: servicecatalog.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AdministratorAccess
