--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     github.com/project-slug: ServerlessOpsIO/aws-service-catalog
 spec:
-  type: api
+  type: cloud-config
   lifecycle: production
   owner: group:0319y80a3hmm9y7
   system: system:account-config
