--- a/products/products.yaml
+++ b/products/products.yaml
@@ -83,7 +83,7 @@ Resources:
   ServiceCatalogCfnExecIamRole:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: "ServiceCatalogCfnExecIamRole"
+      RoleName: !Sub "ServiceCatalogCfnExecIamRole-${AWS::Region}"
       Description: "Service Catalog CFN execution role"
       AssumeRolePolicyDocument:
         Version: 2012-10-17
